Updated styles.css and index.js to address navbar bug on mobile view

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,20 @@ a:hover {
         text-align: left;
     }
 
+    .navbar {
+        -webkit-transition: all 0.6s ease-out;
+        -moz-transition: all 0.6s ease-out;
+        -o-transition: all 0.6s ease-out;
+        -ms-transition: all 0.6s ease-out;
+        transition: all 0.6s ease-out;
+    }
+    
+    .navbar.scrolled {
+        background: transparent;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
     .timeline {
         grid-template-columns: 1fr 3px 1fr;
     }
